# BuddyRaggy

./: .gitignore  pyproject.toml  requirements.txt
configs/: default.yaml
ragassist/: cli.py  mytypes.py  server.py
ragassist/generation/: context_assembler.py  llm_base.py  llm_factory.py  llm_gemini.py  llm_ollama.py
ragassist/index/: bm25_store.py  vector_store.py
ragassist/ingestion/: chunker.py  embedder.py  file_loader.py  preprocess.py
ragassist/retrieval/: retriever.py
ragassist/session/: memory.py
test_data/: test.py
