[project]
name = "rag-assist"
version = "0.1.0"
dependencies = [
  "typer>=0.12",
  "chromadb>=0.5",
  "whoosh>=2.7",
  "sentence-transformers>=3.0",
  "pymupdf>=1.24",
  "fastapi>=0.115",
  "uvicorn>=0.30"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
